--- a/70_pf/SRT/sub/cs.html
+++ b/70_pf/SRT/sub/cs.html
@@ -72,22 +72,139 @@
                         <p>고객홍보처 주임 김현은</p>
                     </div>
                 </li>
-            </ul>
+            </ul><!-- cs_left -->
             <div class="cs_right">
                 <div class="cs_number">
                     <h3>주요 연락처</h3>
-
-                </div>
+                    <div class="number_line"></div>
+                    <div class="number_container">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>노선</th>
+                                    <th>역 명</th>
+                                    <th>연락처</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td rowspan="8">경부선</td>
+                                    <td>수서역</td>
+                                    <td>02-6177-8245</td>
+                                </tr>
+                                <tr>
+                                    <td>동탄역</td>
+                                    <td>031-328-9502</td>
+                                </tr>
+                                <tr>
+                                    <td>평택지제역</td>
+                                    <td>031-646-8805</td>
+                                </tr>
+                                <tr>
+                                    <td>천안아산역</td>
+                                    <td>041-549-6788</td>
+                                </tr>
+                                <tr>
+                                    <td>오송역</td>
+                                    <td>043-231-4542</td>
+                                </tr>
+                                <tr>
+                                    <td>대전역</td>
+                                    <td>042-259-2416</td>
+                                </tr>
+                                <tr>
+                                    <td>동대구역</td>
+                                    <td>053-940-2222</td>
+                                </tr>
+                                <tr>
+                                    <td>부산역</td>
+                                    <td>051-440-2288</td>
+                                </tr>
+                                <tr>
+                                    <td rowspan="3">호남선</td>
+                                    <td>익산역</td>
+                                    <td>063-850-2314</td>
+                                </tr>
+                                <tr>
+                                    <td>광주송정역</td>
+                                    <td>062-601-3289</td>
+                                </tr>
+                                <tr>
+                                    <td>목포역</td>
+                                    <td>061-240-4289</td>
+                                </tr>
+                                <tr>
+                                    <td rowspan="6">경전선</td>
+                                    <td>밀양역</td>
+                                    <td>055-359-4278</td>
+                                </tr>
+                                <tr>
+                                    <td>진영역</td>
+                                    <td>055-345-7788</td>
+                                </tr>
+                                <tr>
+                                    <td>창원중앙역</td>
+                                    <td>055-287-6388</td>
+                                </tr>
+                                <tr>
+                                    <td>창원역</td>
+                                    <td>055-292-7788</td>
+                                </tr>
+                                <tr>
+                                    <td>마산역</td>
+                                    <td>055-293-7788</td>
+                                </tr>
+                                <tr>
+                                    <td>진주역</td>
+                                    <td>055-753-7788</td>
+                                </tr>
+                                <tr>
+                                    <td rowspan="7">경전선</td>
+                                    <td>전주역</td>
+                                    <td>063-249-7019</td>
+                                </tr>
+                                <td>남원역</td>
+                                <td>063-249-7216</td>
+                                </tr>
+                                </tr>
+                                <td>곡성역</td>
+                                <td>061-362-7788</td>
+                                </tr>
+                                </tr>
+                                <td>구례구역</td>
+                                <td>061-782-7788</td>
+                                </tr>
+                                </tr>
+                                <td>순천역</td>
+                                <td>061-749-2288</td>
+                                </tr>
+                                </tr>
+                                <td>여천역</td>
+                                <td>061-684-7785</td>
+                                </tr>
+                                </tr>
+                                <td>여수Expo역</td>
+                                <td>061-749-2604</td>
+                                </tr>
+                                </tr>
+                                <td class="td1">동해선</td>
+                                <td class="td1">포항역</td>
+                                <td class="td1">054-722-7607</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div><!-- number_container -->
+                </div><!-- cd_number -->
                 <div class="cs_parking">
                     <h3>주차장(수서/동탄/평택지제)</h3>
                     <div class="parking_box">
                         <p>1522-1841</p>
                     </div>
                 </div>
-            </div>
-        </div>
+            </div><!-- cs_right -->
+        </div><!-- cs_container -->
         <footer class="footer"></footer>
-    </div>
+    </div><!-- wrap -->
 </body>
 
 </html>
