--- a/70_pf/tourist copy/index.html
+++ b/70_pf/tourist copy/index.html
@@ -100,7 +100,8 @@
                         <span class="space0"><a href="tel:02-1234-5678">02-1234-5678</a></span>
                         <span class="gubun">/</span>
                         <span class="br_line">E-mail
-                            <span class="space0"><a href="mailto:titour@touristintour.com">titour@touristintour.com</a></span>
+                            <span class="space0"><a href="mailto:titour@tourlisttour.com">titour@tourlisttour.com</a></span>
+                            <!-- <span class="space0"><a href="https://mail.naver.com/write/popup?srvid=note&to=id@naver.com">titour@touristintour.com</a></span> -->
                         </span>
                     </span>
                 </p>
