--- a/70_pf/SRT/sub/lostfound.html
+++ b/70_pf/SRT/sub/lostfound.html
@@ -4,15 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SRT 분실물 신고 안내</title>
+    <title>SRT 고객센터 안내</title>
     <link rel="stylesheet" href="../css/reset.css">
-
+    <link rel="stylesheet" href="../css/lostfound.css">
 </head>
 
 <body>
-    <div class="header_container">
-        <header id="header">상단고정헤더</header>
-        <div class="header_line">서브타이틀영역</div>
+    <div class="wrap">
+        <div class="header_container">
+            <header id="header">상단고정헤더</header>
+            <div class="header_line">서브타이틀영역</div>
+        </div>
+        <div class="lf_container">
+            <div class="lost_info">
+                <div class="info_1">
+                    <h3>유실물 신고 안내</h3>
+                </div>
+                <div class="info_2">
+                    <p>열차를 이용하면서 분실한 물건이 있다면 유실물센터 또는 고객센터(1800-1472)로<br>
+                        이용일자, 열차번호, 이용구간, 열차호차, 좌석번호, 분실물 정보 말씀 후 문의하시거나 <br>
+                        경찰청 유실물 통합포털 LOST112(http://lost112.go.kr)에서 검색 및 확인할 수 있습니다. <br>
+                        유실물센터 : [수서역] 02-6177-8245 / [동탄역]
+                        031-328-9505 / [평택지제역] 031-646-8805</p>
+                </div>
+            </div>
+            <div class="lost_method">
+                <div class="method_1">
+                    <h3>유실물 신고 및 습득요령</h3>
+                </div>
+                <div class="method_2">
+                    <p>열차에 내린 직후 분실한 사실을 아셨다면 즉시 역 직원에게 알려주세요. <br>
+                        열차에 타신 후 분실한 사실을 아셨다면 즉시 객실장 또는 승무원에게 알려주세요. <br>
+                        분실한 사실을 하차 후 아셨다면 LOST112 조회 후 고객센터 또는 유실물센터에 문의해 주세요. <br>
+                        분실한 지 며칠 지났다면 LOST112를 통해 확인하세요. <br>
+                        신고하실 때에는 이용일자, 열차번호, 이용구간, 열차호차, 좌석번호, 분실물 정보를 알려주세요.</p>
+                    <div class="lost112"><a href="https://lost112.go.kr/">LOST112 바로가기</a></div>
+                </div>
+            </div>
+            <div class="lf_table"></div>
+            <div class="lost_momment">
+                <div class="momment_1">
+                    <h3>유실물 수령 시</h3>
+                </div>
+                <div class="momment_2"></div>
+            </div>
+            <div class="dw_table"></div>
+        </div><!-- lf_container -->
+        <footer class="footer"></footer>
     </div>
 </body>
 
