--- a/70_pf/SRT/sub/lostfound.html
+++ b/70_pf/SRT/sub/lostfound.html
@@ -23,7 +23,8 @@
                 <div class="info_2">
                     <p>열차를 이용하면서 분실한 물건이 있다면 유실물센터 또는 고객센터(1800-1472)로<br>
                         이용일자, 열차번호, 이용구간, 열차호차, 좌석번호, 분실물 정보 말씀 후 문의하시거나 <br>
-                        경찰청 유실물 통합포털 LOST112(http://lost112.go.kr)에서 검색 및 확인할 수 있습니다. <br>
+                        경찰청 유실물 통합포털 LOST112(<a href="http://lost112.go.kr" target="_blank">http://lost112.go.kr</a>)에서
+                        검색 및 확인할 수 있습니다. <br>
                         유실물센터 : [수서역] 02-6177-8245 / [동탄역]
                         031-328-9505 / [평택지제역] 031-646-8805</p>
                 </div>
@@ -38,20 +39,92 @@
                         분실한 사실을 하차 후 아셨다면 LOST112 조회 후 고객센터 또는 유실물센터에 문의해 주세요. <br>
                         분실한 지 며칠 지났다면 LOST112를 통해 확인하세요. <br>
                         신고하실 때에는 이용일자, 열차번호, 이용구간, 열차호차, 좌석번호, 분실물 정보를 알려주세요.</p>
-                    <div class="lost112"><a href="https://lost112.go.kr/">LOST112 바로가기</a></div>
+                    <div class="lost112"><a href="https://lost112.go.kr/" target="_blank">LOST112 바로가기</a></div>
                 </div>
             </div>
-            <div class="lf_table"></div>
+            <div class="lf_table">
+                <div class="lf_line"></div>
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="2">유실물 습득(SR 직원, 고객)</th>
+                            <th colspan="2">열차 내 유실물 습득(SR 직원, 고객)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>역</th>
+                            <td>유실물 접수 > 고객연락 및 전달 > 유실물 센터 인계</td>
+                            <th>열차 운행 중인 경우</th>
+                            <td>가장 가까운 정차역에 유실물 찾기 요청</td>
+                        </tr>
+                        <tr>
+                            <th>유실물센터<br>(7일간 보관, 고객인도)</th>
+                            <td>정당한 권리자가 다른 SRT 정차역 수령 희망 시, 해당 역으로 인도 조치</td>
+                            <th>열차 운행 종료한 경우</th>
+                            <td>종착역 관리자에게 인도 및 수배요청</td>
+                        </tr>
+                        <tr>
+                            <th rowspan="2" class="th1">경찰서 이관</th>
+                            <td rowspan="2">습득물 발생 시 관계법령에 따라 각 기관에서 7일 동안(또는 즉시) 보관 후 유실자가 나타나지 않을 경우 관할경찰서로 습득물이
+                                이관되오니, 이점 참고 바랍니다.</td>
+                            <th>유실물센터<br>(7일간 보관, 고객인도)</th>
+                            <td>정당한 권리자가 다른 SRT 정차역 수령 희망 시, 해당 역으로 인도 조치</td>
+                        </tr>
+                        <tr>
+                            <th class="th1">경찰서 이관</th>
+                            <td>습득물 발생 시 관계법령에 따라 각 기관에서 7일 동안(또는 즉시) 보관 후 유실자가 나타나지 않을 경우 관할경찰서로 습득물이 이관되오니, 이점 참고
+                                바랍니다.</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
             <div class="lost_momment">
                 <div class="momment_1">
                     <h3>유실물 수령 시</h3>
                 </div>
-                <div class="momment_2"></div>
+                <div class="momment_2">
+                    <p>유실물 수령을 위해 역에 방문할 때에는 신분증을 지참하여 방문하여야 합니다. 부득이하게 본인이 아닌 대리인이 수령할 경우,<br> 자사 양식에 따른 위임장과 유실자 본인의
+                        신분증 사본(사진 파일 등), 대리수령인의 신분증을 모두 지참하고 역으로 방문하여야 합니다.</p>
+                </div>
             </div>
-            <div class="dw_table"></div>
+            <div class="dw_table">
+                <div class="lf_line"></div>
+
+                <table>
+                    <thead>
+                        <th colspan="2">대리수령 위임장 양식 다운로드</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>한글문서(hwp)</th>
+                            <th>PDF문서(pdf)</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="td_img">
+                                    <a href="다운로드파일경로" class="hwp">
+                                        다운로드
+                                        <img src="../images/download.png" alt="대리위임장hwp문서">
+                                    </a>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="td_img">
+                                    <a href="다운로드파일경로" class="pdf">
+                                        다운로드
+                                        <img src="../images/download.png" alt="대리위임장pdf문서">
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div><!-- dw_table -->
         </div><!-- lf_container -->
         <footer class="footer"></footer>
-    </div>
+    </div><!-- wrap -->
 </body>
 
 </html>
