--- a/70_pf/SRT/sub/lostfound.html
+++ b/70_pf/SRT/sub/lostfound.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SRT 고객센터 안내</title>
+    <title>유실물 신고 안내</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/lostfound.css">
 </head>
@@ -21,12 +21,9 @@
                     <h3>유실물 신고 안내</h3>
                 </div>
                 <div class="info_2">
-                    <p>열차를 이용하면서 분실한 물건이 있다면 유실물센터 또는 고객센터(1800-1472)로<br>
-                        이용일자, 열차번호, 이용구간, 열차호차, 좌석번호, 분실물 정보 말씀 후 문의하시거나 <br>
-                        경찰청 유실물 통합포털 LOST112(<a href="http://lost112.go.kr" target="_blank">http://lost112.go.kr</a>)에서
-                        검색 및 확인할 수 있습니다. <br>
-                        유실물센터 : [수서역] 02-6177-8245 / [동탄역]
-                        031-328-9505 / [평택지제역] 031-646-8805</p>
+                    <p>
+                        열차를 이용하면서 분실한 물건이 있다면 유실물센터 또는 고객센터(1800-1472)로<br> 이용일자, 열차번호, 이용구간, 열차호차, 좌석번호, 분실물 정보 말씀 후 문의하시거나 <br>경찰청 유실물 통합포털 LOST112(<a href="http://lost112.go.kr" target="_blank">http://lost112.go.kr</a>)에서 검색 및 확인할 수 있습니다. <br>유실물센터 : [수서역] 02-6177-8245 / [동탄역] 031-328-9505 / [평택지제역] 031-646-8805
+                    </p>
                 </div>
             </div>
             <div class="lost_method">
@@ -34,11 +31,13 @@
                     <h3>유실물 신고 및 습득요령</h3>
                 </div>
                 <div class="method_2">
-                    <p>열차에 내린 직후 분실한 사실을 아셨다면 즉시 역 직원에게 알려주세요. <br>
+                    <p>
+                        열차에 내린 직후 분실한 사실을 아셨다면 즉시 역 직원에게 알려주세요. <br>
                         열차에 타신 후 분실한 사실을 아셨다면 즉시 객실장 또는 승무원에게 알려주세요. <br>
                         분실한 사실을 하차 후 아셨다면 LOST112 조회 후 고객센터 또는 유실물센터에 문의해 주세요. <br>
                         분실한 지 며칠 지났다면 LOST112를 통해 확인하세요. <br>
-                        신고하실 때에는 이용일자, 열차번호, 이용구간, 열차호차, 좌석번호, 분실물 정보를 알려주세요.</p>
+                        신고하실 때에는 이용일자, 열차번호, 이용구간, 열차호차, 좌석번호, 분실물 정보를 알려주세요.
+                    </p>
                     <div class="lost112"><a href="https://lost112.go.kr/" target="_blank">LOST112 바로가기</a></div>
                 </div>
             </div>
@@ -60,7 +59,7 @@
                         </tr>
                         <tr>
                             <th>유실물센터<br>(7일간 보관, 고객인도)</th>
-                            <td>정당한 권리자가 다른 SRT 정차역 수령 희망 시, 해당 역으로 인도 조치</td>
+                            <td>정당한 권리자가 다른 SRT 정차역 수령 희망 시,<br>해당 역으로 인도 조치</td>
                             <th>열차 운행 종료한 경우</th>
                             <td>종착역 관리자에게 인도 및 수배요청</td>
                         </tr>
@@ -69,7 +68,7 @@
                             <td rowspan="2">습득물 발생 시 관계법령에 따라 각 기관에서 7일 동안(또는 즉시) 보관 후 유실자가 나타나지 않을 경우 관할경찰서로 습득물이
                                 이관되오니, 이점 참고 바랍니다.</td>
                             <th>유실물센터<br>(7일간 보관, 고객인도)</th>
-                            <td>정당한 권리자가 다른 SRT 정차역 수령 희망 시, 해당 역으로 인도 조치</td>
+                            <td>정당한 권리자가 다른 SRT 정차역 수령 희망 시,<br>해당 역으로 인도 조치</td>
                         </tr>
                         <tr>
                             <th class="th1">경찰서 이관</th>
