--- a/70_pf/tourist2/index.html
+++ b/70_pf/tourist2/index.html
@@ -19,7 +19,9 @@
 <body>
     <!-- 헤더 -->
     <header id="header">
-        <div class="box_inner"></div>
+        <div class="box_inner">
+            <h1 class="logo"><a href="/index.html"><img src="http://picsum.photos/id/200/270/40" alt="logo"></a></h1>
+        </div>
     </header>
     <div id="container">
         <!--
