--- a/70_pf/tourist2/index.html
+++ b/70_pf/tourist2/index.html
@@ -20,6 +20,15 @@
     <!-- 헤더 -->
     <header id="header">
         <div class="box_inner">
+            <!--
+                1. 절대주소표현방식
+                    https://~
+                    http://~
+                2. 상대주소
+                    ./~     -> 현재 폴더
+                    /~      -> /는 작업영역의 최상위 폴더를 가리킨다.
+                    ../     -> 현재 폴더 기준으로 한 단계 상위로 이동
+            -->
             <h1 class="logo"><a href="/index.html"><img src="http://picsum.photos/id/200/270/40" alt="logo"></a></h1>
         </div>
     </header>
