--- a/70_pf/tourist2/test/sub2.html
+++ b/70_pf/tourist2/test/sub2.html
@@ -9,9 +9,8 @@
 
 <body>
     <h1>서브2 페이지</h1>
-    <a href="/test.html">메인페이지</a>
-    <a href="/test/sub1.html">서브1</a>
-    <a href="/test/sub2.html">서브2</a>
-</body>
+    <a href="https://ooongi.github.io/w0310/70_pf//tourist2/test.html">메인페이지</a>
+    <a href="https://ooongi.github.io/w0310/70_pf//tourist2/test/sub1.html">서브1</a>
+    <a href="https://ooongi.github.io/w0310/70_pf//tourist2/test/sub2.html">서브2</a></body>
 
 </html>
