--- a/70_pf/SRT/sub/tour_best.html
+++ b/70_pf/SRT/sub/tour_best.html
@@ -67,9 +67,7 @@
                         <ul class="best_down" id="best_down">
                             <li><a href="#">SRT 베스트 여행상품</a></li>
                             <li><a href="#">지역별 여행상품</a></li>
-                            <li><a href="#">당일 여행상품</a></li>
-                            <li><a href="#">1박2일 여행상품</a></li>
-                            <li><a href="#">2박3일 여행상품</a></li>
+                            <li><a href="#">기간별 여행상품</a></li>
                         </ul>
                     </nav>
                 </div>
