--- a/70_pf/SRT/sub/lostfound.html
+++ b/70_pf/SRT/sub/lostfound.html
@@ -105,7 +105,7 @@
                                 <div class="td_img">
                                     <a href="다운로드파일경로" class="hwp">
                                         다운로드
-                                        <img src="../images/download.png" alt="대리위임장hwp문서">
+                                        <img src="../images/sub/download.png" alt="대리위임장hwp문서">
                                     </a>
                                 </div>
                             </td>
@@ -113,7 +113,7 @@
                                 <div class="td_img">
                                     <a href="다운로드파일경로" class="pdf">
                                         다운로드
-                                        <img src="../images/download.png" alt="대리위임장pdf문서">
+                                        <img src="../images/sub/download.png" alt="대리위임장pdf문서">
                                     </a>
                                 </div>
                             </td>
