--- a/70_pf/SRT/sub/tour_best.html
+++ b/70_pf/SRT/sub/tour_best.html
@@ -30,7 +30,7 @@
                             <h2>종합검색</h2>
                             <input type="text" class="search_box" placeholder="원하는 여행을 검색해보세요.">
                             <button class="search_btn">
-                                <img src="../images/search.svg" alt="검색버튼">
+                                <img src="../images/sub/search.svg" alt="검색버튼">
                             </button>
                         </div>
                         <div class="item_container">
@@ -101,7 +101,7 @@
                         <div class="best_tour_contents_box" data-page="3"></div>
                         <div class="best_tour_contents_box" data-page="3"></div>
                         <div class="best_tour_contents_box" data-page="3"></div>
-                        <div class="best_tour_contents_box" data-page="3"></div>
+                        <!-- <div class="best_tour_contents_box" data-page="3"></div> -->
                     </div>
                     <div class="best_btn_area">
                         <div class="best_btn_page">
