--- a/70_pf/SRT/sub/tour_best.html
+++ b/70_pf/SRT/sub/tour_best.html
@@ -35,6 +35,11 @@
                         </div>
                         <div class="item_container">
                             <h2>상품상태</h2>
+                            <ul>
+                                <li><button type="button">전체</button></li>
+                                <li><button type="button">예약가능</button></li>
+                                <li><button type="button">출발확정</button></li>
+                            </ul>
 
                         </div>
                         <div class="train_container">
