--- a/70_pf/SRT/sub/tour_best.html
+++ b/70_pf/SRT/sub/tour_best.html
@@ -44,6 +44,93 @@
                         </div>
                         <div class="train_container">
                             <h2>운행구간</h2>
+                            <ul>
+                                <li><button type="button">전체</button></li>
+                                <li><button type="button">경부선</button>
+                                    <ul class="tour_sub">
+                                        <li>수서역</li>
+                                        <li>동탄역</li>
+                                        <li>평택지제역</li>
+                                        <li>천안아산역</li>
+                                        <li>오송역</li>
+                                        <li>대전역</li>
+                                        <li>김천구미역</li>
+                                        <li>서대구역</li>
+                                        <li>동대구역</li>
+                                        <li>경주역</li>
+                                        <li>울산역</li>
+                                        <li>부산역</li>
+                                    </ul>
+                                </li>
+                                <li><button type="button">호남선</button>
+                                    <ul class="tour_sub">
+                                        <li>수서역</li>
+                                        <li>동탄역</li>
+                                        <li>평택지제역</li>
+                                        <li>천안아산역</li>
+                                        <li>오송역</li>
+                                        <li>공주역</li>
+                                        <li>익산역</li>
+                                        <li>정읍역</li>
+                                        <li>광주송정역</li>
+                                        <li>나주역</li>
+                                        <li>목포역</li>
+                                    </ul>
+                                </li>
+                                <li><button type="button">전라선</button>
+                                    <ul class="tour_sub">
+                                        <li>수서역</li>
+                                        <li>동탄역</li>
+                                        <li>평택지제역</li>
+                                        <li>천안아산역</li>
+                                        <li>오송역</li>
+                                        <li>대전역</li>
+                                        <li>공주역</li>
+                                        <li>익산역</li>
+                                        <li>전주역</li>
+                                        <li>남원역</li>
+                                        <li>곡성역</li>
+                                        <li>곡성역</li>
+                                        <li>구례구역</li>
+                                        <li>순천역</li>
+                                        <li>여천역</li>
+                                        <li>여수엑스포역</li>
+                                    </ul>
+                                </li>
+                                <li><button type="button">경전선</button>
+                                    <ul class="tour_sub">
+                                        <li>수서역</li>
+                                        <li>동탄역</li>
+                                        <li>평택지제역</li>
+                                        <li>천안아산역</li>
+                                        <li>오송역</li>
+                                        <li>대전역</li>
+                                        <li>김천구미역</li>
+                                        <li>서대구역</li>
+                                        <li>동대구역</li>
+                                        <li>밀양역</li>
+                                        <li>진영역</li>
+                                        <li>창원중앙역</li>
+                                        <li>창원역</li>
+                                        <li>마산역</li>
+                                        <li>진주역</li>
+                                    </ul>
+                                </li>
+                                <li><button type="button">동해선</button>
+                                    <ul class="tour_sub">
+                                        <li>수서역</li>
+                                        <li>동탄역</li>
+                                        <li>평택지제역</li>
+                                        <li>천안아산역</li>
+                                        <li>오송역</li>
+                                        <li>대전역</li>
+                                        <li>김천구미역</li>
+                                        <li>서대구역</li>
+                                        <li>동대구역</li>
+                                        <li>포항역</li>
+                                    </ul>
+                                </li>
+                            </ul>
 
                         </div>
                         <div class="during_container">
@@ -59,7 +146,9 @@
 
                         </div>
                     </div><!-- sidebar_contents_area -->
-                    <div><h2>필터적용</h2></div>
+                    <div>
+                        <h2>필터적용</h2>
+                    </div>
                 </div><!-- sidebar_contents -->
             </div>
             <div class="best_right">
