--- a/70_pf/tourist2/index.html
+++ b/70_pf/tourist2/index.html
@@ -13,25 +13,12 @@
     <script src="js/slider.js"></script>
     <!-- bx슬라이더 라이브러리 css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.css">
-    <link rel="stylesheet" href="css/test.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <!-- 헤더 -->
-    <header id="header">
-        <div class="box_inner">
-            <!--
-                1. 절대주소표현방식
-                    https://~
-                    http://~
-                2. 상대주소
-                    ./~     -> 현재 폴더
-                    /~      -> /는 작업영역의 최상위 폴더를 가리킨다.
-                    ../     -> 현재 폴더 기준으로 한 단계 상위로 이동
-            -->
-            <h1 class="logo"><a href="/index.html"><img src="http://picsum.photos/id/200/270/40" alt="logo"></a></h1>
-        </div>
-    </header>
+
     <div id="container">
         <!--
 
@@ -97,34 +84,7 @@
         </div>
     </div>
     <!-- 푸터 -->
-    <footer>
-        <div class="box_inner">
-            <div class="foot_left">
-                <ul class="foot_list">
-                    <li><a href="#">하단메뉴1</a></li>
-                    <li><a href="#">하단메뉴2</a></li>
-                </ul>
-                <h3>투어리스트인투어</h3>
-                <p class="addr">서울특별시 종로구 혜화동 9길 청운빌딩 5층
-                    <span class="gubun">/</span>
-                    <span class="br_line">대표전화
-                        <span class="space0"><a href="tel:02-1234-5678">02-1234-5678</a></span>
-                        <span class="gubun">/</span>
-                        <span class="br_line">E-mail
-                            <span class="space0"><a href="mailto:titour@tourlisttour.com">titour@tourlisttour.com</a></span>
-                            <!-- <span class="space0"><a href="https://mail.naver.com/write/popup?srvid=note&to=id@naver.com">titour@touristintour.com</a></span> -->
-                        </span>
-                    </span>
-                </p>
-                <p class="copy">Copyright 2025 TouristInTour. all right reserved.</p>
-            </div>
-            <ul class="snslink">
-                <li><a href="#">sns1</a></li>
-                <li><a href="#">sns2</a></li>
-                <li><a href="#">sns3</a></li>
-            </ul>
-        </div><!-- box_inner -->
-    </footer>
+
 </body>
 
 </html>
