--- a/70_pf/tourist2/header.html
+++ b/70_pf/tourist2/header.html
@@ -20,17 +20,16 @@
     <!-- 헤더 -->
     <header id="header">
         <div class="box_inner">
-            <h1 class="logo">
-                <a href="/index.html">
-                    <img src="http://picsum.photos/id/200/270/40" alt="logo">
-                </a>
-            </h1>
             <div class="util">
                 <a href="#">로그인</a>
                 <a href="#">회원가입</a>
             </div>
             <div class="nav_outer_box">
+                <h1 class="logo">
+                    <a href="/index.html"><img src="http://picsum.photos/id/200/270/40" alt="logo"></a>
+                </h1>
                 <nav class="gnb">
+                    <div class="nav_bg"></div>
                     <ul class="main">
                         <li><a href="#">여행정보</a>
                             <ul class="sub">
